--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1446,7 +1446,7 @@ restoreNavStates();
 </main>
 
 <!-- Mobile Menu Toggle -->
-<button id="mobile-menu-toggle" class="fixed top-4 left-4 z-50 p-2 bg-white rounded-lg shadow-md md:hidden">
+<button id="mobile-menu-toggle" class="fixed top-4 left-4 z-50 p-2 bg-white dark:bg-zinc-800 text-gray-800 dark:text-white rounded-lg shadow-md md:hidden">
     <i class="ph ph-list text-xl"></i>
 </button>
 
