--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -257,7 +257,7 @@
             <div class="calendar-header">
                 <h2><i class="ph ph-calendar"></i> Upcoming Content</h2>
                 <a href="{{ url_for('content_calendar.content_calendar') }}" class="view-analytics-btn">
-                    View Content Calendar
+                    View Calendar
                 </a>
             </div>
             
